--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input type="number" id="price1"/>
         <button id="add-btn">Add Item</button>
         <button id="delete-button">Delete Item(s)</button>
-      </form>
+      </div>
     </main>
   </body>
 </html>
